# fastly-db

./: Cargo.toml  README.md  fastly.toml
loadtest/: integrity.sh  integrity_write.lua  read.lua  run.sh  setup.sh  write.lua
src/: db.rs  main.rs
